@@ -31,8 +31,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <jnlp.codebase>http://myserver/selfissue/jnlp/</jnlp.codebase>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
     </properties>
-
-    <dependencies>
+	
+    <prerequisites>
+        <maven>3.9</maven>
+    </prerequisites> 
+    
+	<dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>ceridwen-selfissue-common</artifactId>
@@ -42,6 +46,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <build>
         <plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>java.smartcardio</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>		
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
